--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@clerk/nextjs": "^5.1.3",
     "antd": "^5.17.4",
     "next": "14.2.3",
+    "preline": "^2.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1"
