--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.1.3",
+    "@strapi/blocks-react-renderer": "^1.0.1",
     "antd": "^5.17.4",
     "next": "14.2.3",
     "preline": "^2.3.0",
