--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^5.1.3",
     "antd": "^5.17.4",
+    "dayjs": "^1.11.11",
     "next": "14.2.3",
     "preline": "^2.3.0",
     "react": "^18",
