make faqs page dynamic

--- a/.env.production
+++ b/.env.production
@@ -4,5 +4,7 @@ CLERK_SECRET_KEY=sk_test_9bgG6ZpFRXOWFrXpVpcHpjLcj44rTitpG9yPd0VTOI
 NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
 
-# NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/dashboard
-# NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/dashboard
+NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/dashboard
+NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/dashboard
+
+BACKEND_URI=http://localhost:1337
