--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@clerk/nextjs": "^5.1.3",
     "antd": "^5.17.4",
+    "axios": "^1.7.2",
     "dayjs": "^1.11.11",
+    "lodash": "^4.17.21",
     "next": "14.2.3",
     "preline": "^2.3.0",
     "react": "^18",
@@ -22,6 +24,7 @@
     "swiper": "^11.1.4"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
