fix: disable eslint

--- a/.env.production
+++ b/.env.production
@@ -7,4 +7,4 @@ NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
 NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/dashboard
 NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/dashboard
 
-BACKEND_URI=http://localhost:1337
+BACKEND_URI=http://80.65.208.246:1337
