--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "axios": "^1.7.2",
     "dayjs": "^1.11.12",
     "lodash": "^4.17.21",
-    "next": "14.2.3",
+    "next": "^14.2.15",
     "preline": "^2.3.0",
     "react": "^18",
     "react-dom": "^18",
