--- a/package.json
+++ b/package.json
@@ -24,14 +24,18 @@
     "swiper": "^11.1.4"
   },
   "devDependencies": {
+    "@eslint/js": "^9.17.0",
     "@types/lodash": "^4.17.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
+    "eslint": "^8.57.1",
     "eslint-config-next": "14.2.3",
+    "eslint-plugin-react": "^7.37.2",
+    "globals": "^15.13.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "typescript-eslint": "^8.18.1"
   }
 }
